--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,21 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "25.12903645 -67.59741259\n",
-      "25.92017388 11.09532135\n",
-      "26.62509167 74.84233102\n",
-      "-59.98969384 -76.89176677\n",
-      "37.30571269 -61.13376282\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use the tuple() function to display the latitude and longitude combinations.\n",
     "for coordinate in coordinates:\n",
@@ -37,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,21 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cockburn town tc\n",
-      "gat ly\n",
-      "parvatsar in\n",
-      "punta arenas cl\n",
-      "saint george bm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use the tuple() function to display the latitude and longitude combinations.\n",
     "for coordinate in coordinates:\n",
@@ -71,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,39 +77,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=786e287cec93ca1196e58379e265c8b3&q=Boston\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create an endpoint URL for a city.\n",
-    "city_url = url + \"&q=\" + \"Boston\"\n",
-    "print(city_url)"
+    "city_url = url + \"&q=\" + \"Boston\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Make a 'Get' request for the city weather.\n",
     "city_weather = requests.get(city_url)\n",
@@ -142,20 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [404]>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create an endpoint URL for a city.\n",
     "city_url = url + \"&q=\" + \"Bston\"\n",
@@ -165,20 +110,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create an endpoint URL for a city.\n",
     "city_url = url + \"&q=\" + \"Boston\"\n",
@@ -188,20 +122,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":802,\"main\":\"Clouds\",\"description\":\"scattered clouds\",\"icon\":\"03n\"}],\"base\":\"stations\",\"main\":{\"temp\":75.27,\"feels_like\":75.83,\"temp_min\":67.06,\"temp_max\":80.1,\"pressure\":1011,\"humidity\":71},\"visibility\":10000,\"wind\":{\"speed\":1.99,\"deg\":294,\"gust\":8.01},\"clouds\":{\"all\":50},\"dt\":1622948406,\"sys\":{\"type\":2,\"id\":2013408,\"country\":\"US\",\"sunrise\":1622884109,\"sunset\":1622938644},\"timezone\":-14400,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get the text of the 'Get' request.\n",
     "city_weather.text"
@@ -209,44 +132,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
-       " 'weather': [{'id': 802,\n",
-       "   'main': 'Clouds',\n",
-       "   'description': 'scattered clouds',\n",
-       "   'icon': '03n'}],\n",
-       " 'base': 'stations',\n",
-       " 'main': {'temp': 75.27,\n",
-       "  'feels_like': 75.83,\n",
-       "  'temp_min': 67.06,\n",
-       "  'temp_max': 80.1,\n",
-       "  'pressure': 1011,\n",
-       "  'humidity': 71},\n",
-       " 'visibility': 10000,\n",
-       " 'wind': {'speed': 1.99, 'deg': 294, 'gust': 8.01},\n",
-       " 'clouds': {'all': 50},\n",
-       " 'dt': 1622948406,\n",
-       " 'sys': {'type': 2,\n",
-       "  'id': 2013408,\n",
-       "  'country': 'US',\n",
-       "  'sunrise': 1622884109,\n",
-       "  'sunset': 1622938644},\n",
-       " 'timezone': -14400,\n",
-       " 'id': 4930956,\n",
-       " 'name': 'Boston',\n",
-       " 'cod': 200}"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get the JSON text of the 'Get' request.\n",
     "city_weather.json()"
@@ -254,17 +142,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "City Weather found.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create an endpoint URL for a city.\n",
     "city_url = url + \"&q=\" + \"Boston\"\n",
@@ -277,17 +157,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "City Weather found.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create an endpoint URL for a city.\n",
     "city_url = url + \"&q=\" + \"Bston\"\n",
@@ -300,44 +172,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
-       " 'weather': [{'id': 802,\n",
-       "   'main': 'Clouds',\n",
-       "   'description': 'scattered clouds',\n",
-       "   'icon': '03n'}],\n",
-       " 'base': 'stations',\n",
-       " 'main': {'temp': 74.73,\n",
-       "  'feels_like': 75.29,\n",
-       "  'temp_min': 67.14,\n",
-       "  'temp_max': 79.45,\n",
-       "  'pressure': 1011,\n",
-       "  'humidity': 72},\n",
-       " 'visibility': 10000,\n",
-       " 'wind': {'speed': 3, 'deg': 289, 'gust': 8.01},\n",
-       " 'clouds': {'all': 50},\n",
-       " 'dt': 1622949402,\n",
-       " 'sys': {'type': 2,\n",
-       "  'id': 2013408,\n",
-       "  'country': 'US',\n",
-       "  'sunrise': 1622884109,\n",
-       "  'sunset': 1622938644},\n",
-       " 'timezone': -14400,\n",
-       " 'id': 4930956,\n",
-       " 'name': 'Boston',\n",
-       " 'cod': 200}"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create an endpoint URL for a city.\n",
     "city_url = url + \"&q=\" + \"Boston\"\n",
@@ -347,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,57 +194,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'US'"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "boston_data['sys']['country']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1622949402"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "boston_data['dt']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "42.3584 -71.0598 79.45 72 50 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lat = boston_data[\"coord\"][\"lat\"]\n",
     "lng = boston_data[\"coord\"][\"lon\"]\n",
@@ -420,20 +227,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2021-06-06 03:16:42'"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import the datetime module from the datetime library.\n",
     "from datetime import datetime\n",
@@ -441,6 +237,30 @@
     "date = boston_data[\"dt\"]\n",
     "# Convert the UTC date to a date format with year, month, day, hours, minutes, and seconds.\n",
     "datetime.utcfromtimestamp(date).strftime('%Y-%m-%d %H:%M:%S')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'06/06/21'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the time module.\n",
+    "import time\n",
+    "# Get today's date in seconds.\n",
+    "today = time.strftime(\"%x\")\n",
+    "today"
    ]
   },
   {
